[package]
name = "retype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { path = "./rdev", features = ["unstable_grab"] }
log = { version = "0.4.21", features = ["release_max_level_debug"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
simplelog = "0.12.2"
tray-item = { version = "0.10", features = ["ksni"] }
dirs = "5.0.1"
gtk = { version = "0.9.0", package = "gtk4" }
selection = { version = "1.2.0", path = "./selection" }
